feat: reorganize workspace control center
